# youtube-music-analytics

./: .env.backup.2025-09-13  .env.example  .gitignore  .pre-commit-config.yaml  .yt_local.db  COMMIT_MESSAGE.md  DEVELOPMENT_LOG.md  DOCKER_MACOS_GUIDE.md  FINAL_COMPLETION_SUMMARY.md  FOLDER_AUDIT_REPORT.md  LICENSE  Makefile  PORTFOLIO_BENCHMARK.md  README.md  README_NEW.md  README_PORTFOLIO.md  SENTIMENT_ANALYSIS_SUMMARY.md  STORYTELLING_FRAMEWORK_SUMMARY.md  conftest.py  demo_error_handling.py  demo_storytelling.py  deploy_to_staging.sh  dockersetup  execute_artist_comparison.py  execute_data_quality.py  execute_music_analytics.py  fix_imports.py  git-status-analysis.md  github-setup-guide.md  music_industry_sentiment_dataset_v2.jsonl  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_notebook.py  setup.cfg  sitecustomize.py  test_current_sentiment_model.py  test_final_system.py
config/: expected_artists.json
notebooks/: README.md
scripts/: automation_manager.py  benchmark_progress.py  cleanup_dummy_videos.py  comprehensive_artist_validation.py  enhanced_ci.py  enterprise_deployment.sh  fix_all_notebooks.py  fix_notebook_json.py  pre_commit_hook.py  quick_artist_check.py  repo_switcher.py  run_data_quality_checks.py  run_local_ci.py  setup_cron.sh  setup_git_hooks.py  setup_sentiment.py  system_health_monitor.py  validate_artist_data.py
tasks/: 01_database_cleanup_tasks.md  02_sentiment_enhancement_tasks.md  03_educational_analytics_tasks.md  04_testing_cicd_tasks.md
tests/: test_alias_manager.py  test_alias_manager_extras.py  (+31 more)
(+106 files in other folders)
