[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "icatalogviz"
version = "0.1.0"
description = "Helper lib for iCatalog notebooks (viz + utils)"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.2",
    "altair>=5.0",
    "plotly>=5.20",
    "numpy>=1.26",
    "pyarrow>=15.0",
]

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.isort]
profile = "black"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["icatalogviz*"]
namespaces = false
